@@ -29,6 +29,8 @@ Version 1.13.6+dev:
  * WML Engine:
    * Removed LOW_MEM option when building.
    * Add color= attribute to [floating_text]
+   * New ability_type key in standard unit filters matches if the unit has any
+     ability of the specified type (tag name).
 
 Version 1.13.6:
  * AI:
